--- a/SwiftChart/Base.lproj/Main.storyboard
+++ b/SwiftChart/Base.lproj/Main.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GPLineChart" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SwiftChart" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -18,21 +18,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TaS-My-A3K">
-                                <rect key="frame" x="16" y="20" width="568" height="150"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KVq-nv-mQC" customClass="Chart" customModule="SwiftChart">
+                                <rect key="frame" x="16" y="120" width="568" height="196"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="196" id="xNz-n7-uOD"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="TaS-My-A3K" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ZE7-dy-ILQ"/>
-                            <constraint firstItem="TaS-My-A3K" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Zlq-fv-Aky"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="TaS-My-A3K" secondAttribute="trailing" id="b5U-TX-0Xr"/>
-                            <constraint firstItem="TaS-My-A3K" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.25" id="iL3-Mi-euG"/>
+                            <constraint firstItem="KVq-nv-mQC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="100" id="AIk-6D-xpk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KVq-nv-mQC" secondAttribute="trailing" id="lmd-NV-3ua"/>
+                            <constraint firstItem="KVq-nv-mQC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="mOy-n3-lY6"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="chartContainer" destination="TaS-My-A3K" id="mWe-jI-Bhs"/>
+                        <outlet property="chart" destination="KVq-nv-mQC" id="aJC-5G-0wH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
