--- a/SwiftChart/Base.lproj/Main.storyboard
+++ b/SwiftChart/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -19,22 +19,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KVq-nv-mQC" customClass="Chart" customModule="SwiftChart">
-                                <rect key="frame" x="16" y="120" width="568" height="196"/>
+                                <rect key="frame" x="16" y="87" width="568" height="196"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="196" id="xNz-n7-uOD"/>
+                                    <constraint firstAttribute="height" constant="196" id="JZ7-Mm-cvR"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xN-l3-9CG">
+                                <rect key="frame" x="16" y="48" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="KVq-nv-mQC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="100" id="AIk-6D-xpk"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="KVq-nv-mQC" secondAttribute="trailing" id="lmd-NV-3ua"/>
-                            <constraint firstItem="KVq-nv-mQC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="mOy-n3-lY6"/>
+                            <constraint firstItem="KVq-nv-mQC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="EJA-pa-UMS"/>
+                            <constraint firstItem="KVq-nv-mQC" firstAttribute="top" secondItem="1xN-l3-9CG" secondAttribute="bottom" constant="18" id="FGv-WT-XdP"/>
+                            <constraint firstItem="1xN-l3-9CG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="KFQ-x6-MtM"/>
+                            <constraint firstItem="1xN-l3-9CG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" multiplier="2" constant="8" symbolic="YES" id="gz9-Pt-Ldu"/>
+                            <constraint firstItem="KVq-nv-mQC" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="hMb-OL-xjm"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="chart" destination="KVq-nv-mQC" id="aJC-5G-0wH"/>
+                        <outlet property="chartLabel" destination="1xN-l3-9CG" id="mdb-De-mf9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
